# mpt-extension-python-contrib

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  compose.yaml  conftest.py  pyproject.toml  sonar-project.properties
.github/: CODEOWNERS
.github/workflows/: pr-build-merge.yml  release-extension.yml  release-library.yml  release.yml
custom-notifications/: .copier-answers.yml  AGENTS.md  README.md  pyproject.toml
custom-notifications/docs/: architecture.md  contributing.md  releases.md  testing.md  usage.md
custom-notifications/mpt_extension_contrib/custom_notifications/: __init__.py  base.py  context.py  discovery.py  registry.py
custom-notifications/mpt_extension_contrib/custom_notifications/channels/: ses.py  ses_async.py  teams.py  teams_async.py  teams_cards.py
custom-notifications/tests/: conftest.py  test_context.py  test_discovery.py  test_registry.py  test_ses.py  test_ses_async.py  test_teams.py  test_teams_async.py
docs/: architecture.md  contributing.md  deployment.md  documentation.md  examples.md  local-development.md  migrations.md  releases.md  testing.md
due-date/: .copier-answers.yml  AGENTS.md  README.md  pyproject.toml  sonar-project.properties
due-date/docs/: architecture.md  contributing.md  releases.md  testing.md  usage.md
due-date/mpt_extension_contrib/due_date/: __init__.py  calculation.py  example.py  parameters.py  steps.py
due-date/tests/: conftest.py  test_calculation.py  test_example.py  test_parameters.py  test_steps.py
fixtures/: .copier-answers.yml  AGENTS.md  README.md  pyproject.toml
fixtures/docs/: architecture.md  contributing.md  releases.md  technical-design-review.md  testing.md  usage.md
fixtures/mpt_extension_contrib/fixtures/: __init__.py  errors.py  factories.py  parameters.py  plugin.py  scenarios.py
fixtures/tests/: test_demo.py  test_errors.py  test_factories.py  test_parameters.py  test_plugin.py  test_scenarios.py
frontend/: package-lock.json  package.json  tsconfig.json
make/: common.mk  repo.mk
order-status/: .copier-answers.yml  AGENTS.md  README.md  pyproject.toml
order-status/docs/: architecture.md  contributing.md  releases.md  testing.md  usage.md
order-status/mpt_extension_contrib/order_status/: __init__.py  steps.py  templates.py
order-status/tests/: conftest.py  test_steps.py  test_templates.py
phase-step/: .copier-answers.yml  AGENTS.md  README.md  pyproject.toml
phase-step/docs/: architecture.md  contributing.md  releases.md  testing.md  usage.md
phase-step/mpt_extension_contrib/phase_step/: __init__.py  phase_gate.py  steps.py
phase-step/tests/: conftest.py  test_phase_gate.py  test_steps.py
reports/: .copier-answers.yml  AGENTS.md  README.md  pyproject.toml
reports/docs/: architecture.md  contributing.md  releases.md  testing.md  usage.md
reports/mpt_extension_contrib/reports/: __init__.py  confluence.py  excel.py  pending_orders.py  report.py  report_async.py  report_base.py
reports/tests/: test_confluence.py  test_excel.py  test_pending_orders.py  test_report.py
scripts/: check_repository.py  detect_changed_packages.py  prepare_release.py  scaffold_module.py
scripts/templates/module/: AGENTS.md  README.md  copier.yml  pyproject.toml  sonar-project.properties  {{ _copier_conf.answers_file }}
scripts/templates/module/docs/: architecture.md  contributing.md  releases.md  testing.md  usage.md
scripts/templates/module/mpt_extension_contrib/{{ python_name }}/: __init__.py
scripts/templates/module/tests/: test_example.py
scripts/tests/: test_check_repository.py  test_detect_changed_packages.py  test_prepare_release.py  test_scaffold_module.py
shared/: AGENTS.md  README.md  pyproject.toml  sonar-project.properties
shared/docs/: architecture.md  contributing.md  releases.md  testing.md  usage.md
shared/mpt_extension_contrib/shared/: __init__.py  naming.py
shared/tests/: test_naming.py
tests/: test_namespace.py
tests/fixtures/: sdk.py
