[project]
name = "mpt-extension-contrib-custom-notifications"
version = "0.0.0"
description = "Pluggable notification channels (Teams, …) for MPT Extension SDK projects."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
teams = [
  "microsoft-teams-cards>=2,<3",
  "httpx>=0.28,<1",
]

[project.entry-points."mpt_extension_contrib.custom_notifications.channels"]
teams = "mpt_extension_contrib.custom_notifications.channels.teams:channel"

[dependency-groups]
dev = [
  # Channel extras are installed in the dev env so channel code is covered.
  "microsoft-teams-cards>=2,<3",
  "httpx>=0.28,<1",
  "respx==0.23.*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mpt_extension_contrib"]

[tool.hatch.build.targets.sdist]
include = [
  "LICENSE",
  "mpt_extension_contrib/custom_notifications",
  "README.md",
]
