[project]
name = "mpt-extension-contrib-due-date"
version = "0.0.0"
description = "Order processing due-date pipeline steps for MPT Extension SDK projects."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mpt-extension-sdk>=6.3,<7",
    "pydantic>=2.13,<3",
]

[dependency-groups]
dev = [
    "freezegun==1.5.*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mpt_extension_contrib"]

[tool.hatch.build.targets.sdist]
include = [
  "LICENSE",
  "mpt_extension_contrib/due_date",
  "README.md",
]
