[project]
name = "mpt-extension-contrib-fixtures"
version = "0.0.0"
description = "Pytest fixtures and polyfactory factories for MPT-shaped objects (orders, agreements, subscriptions)."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Framework :: Pytest",
]
dependencies = [
    "mpt-extension-sdk>=6.3,<7",
    "polyfactory>=2.22,<3",
    "pytest>=8,<10",
]

[dependency-groups]
dev = []

[project.entry-points.pytest11]
mpt_extension_contrib_fixtures = "mpt_extension_contrib.fixtures.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mpt_extension_contrib"]

[tool.hatch.build.targets.sdist]
include = [
  "LICENSE",
  "mpt_extension_contrib/fixtures",
  "README.md",
]
