[project]
name = "mpt-extension-contrib-order-status"
version = "0.0.0"
description = "Order status pipeline steps for MPT Extension SDK projects."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mpt-extension-sdk>=6.3,<7",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mpt_extension_contrib"]

[tool.hatch.build.targets.sdist]
include = [
  "LICENSE",
  "mpt_extension_contrib/order_status",
  "README.md",
]
