[project]
name = "mpt-extension-contrib-phase-step"
version = "0.0.0"
description = "Provisioning-phase gating for MPT Extension SDK pipeline steps."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mpt-extension-sdk>=6.3,<7",
    "pydantic>=2.13,<3",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mpt_extension_contrib"]

[tool.hatch.build.targets.sdist]
include = [
  "LICENSE",
  "mpt_extension_contrib/phase_step",
  "README.md",
]
