[project]
name = "mpt-extension-contrib-reports"
version = "0.0.0"
description = "Report generation and publishing helpers for MPT Extension SDK projects."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atlassian-python-api==4.0.*",
    "mpt-api-client==6.3.*",
    "openpyxl==3.1.*",
    "requests==2.34.*",
]

[dependency-groups]
dev = [
    "freezegun==1.5.*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mpt_extension_contrib"]

[tool.hatch.build.targets.sdist]
include = [
  "LICENSE",
  "mpt_extension_contrib/reports",
  "README.md",
]
