[project]
name = "{{ distribution }}"
version = "0.0.0"
description = "Contrib helpers for {{ module }} Extension SDK workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mpt_extension_contrib"]

[tool.hatch.build.targets.sdist]
include = [
  "LICENSE",
  "mpt_extension_contrib/{{ python_name }}",
  "README.md",
]
